+ model category page

--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -153,6 +153,14 @@
           width: 100%;
         }
       }
+      &.is-active {
+        .header--bg-gray & {
+          color: $blue;
+          &:after {
+            width: 100%;
+          }
+        }
+      }
     }
   }
 
