--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -20,3 +20,7 @@
 // Blocks
 @import "blocks/index";
 //-----------------------------------------
+
+// Pages
+@import "pages/index";
+//-----------------------------------------
