--- a/src/tpl/inc/nav.twig
+++ b/src/tpl/inc/nav.twig
@@ -1,7 +1,7 @@
 <nav class="nav">
   <div class="nav-list">
     <a class="nav__link" href="">Модельный ряд</a>
-    <a class="nav__link" href="">Услуги</a>
+    <span class="nav__link is-active">Услуги</span>
     <a class="nav__link" href="">компания</a>
     <a class="nav__link" href="">новости</a>
     <a class="nav__link" href="">контакты</a>
