--- a/src/tpl/index.twig
+++ b/src/tpl/index.twig
@@ -12,6 +12,7 @@
             { link: 'main', name: 'Главная' },
             { link: 'service', name: 'Услуги' },
             { link: 'models', name: 'Модельный ряд' },
+            { link: 'models-category', name: 'Модельный ряд (категория)' },
         ] %}
 
         <div class="wrapper">
