--- a/src/tpl/index.twig
+++ b/src/tpl/index.twig
@@ -13,6 +13,7 @@
             { link: 'service', name: 'Услуги' },
             { link: 'models', name: 'Модельный ряд' },
             { link: 'models-category', name: 'Модельный ряд (категория)' },
+            { link: 'news', name: 'Новости' },
         ] %}
 
         <div class="wrapper">
