--- a/src/tpl/index.twig
+++ b/src/tpl/index.twig
@@ -14,6 +14,7 @@
             { link: 'models', name: 'Модельный ряд' },
             { link: 'models-category', name: 'Модельный ряд (категория)' },
             { link: 'news', name: 'Новости' },
+            { link: 'news-item', name: 'Новость' },
         ] %}
 
         <div class="wrapper">
