--- a/src/styles/components/links.scss
+++ b/src/styles/components/links.scss
@@ -10,6 +10,34 @@
     }
 }
 
+.link-back {
+    position: relative;
+    display: inline-block;
+    text-decoration: none;
+    color: $blue;
+    font-weight: 600;
+
+    &__arrow {
+        position: absolute;
+        z-index: 1;
+        width: 21px;
+        height: 21px;
+        top: 2px;
+        right: 100%;
+        overflow: hidden;
+        transform: translate3d(-30px, 0 , 0);
+        transition: width .3s;
+        svg {
+            transform: rotate(-180deg);
+        }
+    }
+    &:hover {
+        .link-back__arrow {
+            width: 53px;
+        }
+    }
+}
+
 @include media-breakpoint-up(sm) {
     .link-logo {
         width: 117px;
