--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -1,6 +1,6 @@
 @import "grid";
 @import "transition";
-// @import "tabs";
+@import "tabs";
 // @import "alert";
 @import "breadcrumb";
 @import "button";
