--- a/src/tpl/index.twig
+++ b/src/tpl/index.twig
@@ -15,6 +15,7 @@
             { link: 'models-category', name: 'Модельный ряд (категория)' },
             { link: 'news', name: 'Новости' },
             { link: 'news-item', name: 'Новость' },
+            { link: 'contact', name: 'Контакты' },
         ] %}
 
         <div class="wrapper">
