--- a/src/styles/components/links.scss
+++ b/src/styles/components/links.scss
@@ -1,45 +1,65 @@
 .link-logo {
-    display: block;
-    width: 75px;
-    text-decoration: none;
+  display: block;
+  width: 75px;
+  text-decoration: none;
 
-    &__img {
-        display: block;
-        width: 100%;
-        max-width: 100%;
-    }
+  &__img {
+    display: block;
+    width: 100%;
+    max-width: 100%;
+  }
 }
 
 .link-back {
-    position: relative;
-    display: inline-block;
-    text-decoration: none;
-    color: $blue;
-    font-weight: 600;
+  position: relative;
+  display: inline-block;
+  text-decoration: none;
+  color: $blue;
+  font-weight: 600;
 
-    &__arrow {
-        position: absolute;
-        z-index: 1;
-        width: 21px;
-        height: 21px;
-        top: 2px;
-        right: 100%;
-        overflow: hidden;
-        transform: translate3d(-30px, 0 , 0);
-        transition: width .3s;
-        svg {
-            transform: rotate(-180deg);
-        }
+  &__arrow {
+    position: absolute;
+    z-index: 1;
+    width: 21px;
+    height: 21px;
+    top: 2px;
+    right: 100%;
+    overflow: hidden;
+    transform: translate3d(-30px, 0, 0);
+    transition: width 0.3s;
+    svg {
+      transform: rotate(-180deg);
     }
-    &:hover {
-        .link-back__arrow {
-            width: 53px;
-        }
+  }
+  &:hover {
+    .link-back__arrow {
+      width: 53px;
     }
+  }
+}
+
+.link-lg {
+  color: $blue;
+  text-decoration: none;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 1.5;
 }
 
 @include media-breakpoint-up(sm) {
-    .link-logo {
-        width: 117px;
-    }
+  .link-logo {
+    width: 117px;
+  }
+}
+
+@include media-breakpoint-up(md) {
+  .link-lg {
+    font-size: 36px;
+  }
+}
+
+@include media-breakpoint-up(lg) {
+  .link-lg {
+    font-size: 42px;
+  }
 }
