--- a/src/tpl/inc/page.twig
+++ b/src/tpl/inc/page.twig
@@ -41,5 +41,34 @@
 {% include 'tpl/inc/footer.twig' %}
 
 <script src="js/index.js?{{ date().getTime() }}"></script>
+<script>
+        var map;
+        var myLatLng = {lat: 55.75694, lng: 37.6094};
+
+        function initMap() {
+          map = new google.maps.Map(document.getElementById('ctp-map'), {
+            center: {lat: 55.75694, lng: 37.60946},
+            zoom: 18,
+            disableDefaultUI: true
+          });
+
+          var image = {
+            url: 'images/content/i-marker-2x.png',
+            size: new google.maps.Size(86, 120),
+            // The origin for this image is (0, 0).
+            origin: new google.maps.Point(0, 0),
+            // The anchor for this image is the base of the flagpole at (0, 32).
+            anchor: new google.maps.Point(0, 60),
+            scaledSize: new google.maps.Size(43, 60)
+          }
+
+          var marker = new google.maps.Marker({
+            position: myLatLng,
+            map: map,
+            icon: image
+          });
+        }
+      </script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyANLiSH02TkHWQS0F-SxzhweJg_zcq-IA4&callback=initMap" async defer></script>
 </body>
 </html>
