--- a/src/tpl/index.twig
+++ b/src/tpl/index.twig
@@ -16,6 +16,7 @@
             { link: 'news', name: 'Новости' },
             { link: 'news-item', name: 'Новость' },
             { link: 'contact', name: 'Контакты' },
+            { link: 'policies', name: 'Пользовательское соглашение' },
         ] %}
 
         <div class="wrapper">
