--- a/src/styles/components/font-type.scss
+++ b/src/styles/components/font-type.scss
@@ -65,8 +65,18 @@ h6,
   text-align: center;
 }
 
+.b-500 {
+  font-weight: 500;
+}
 b {
   font-weight: 600;
+}
+strong {
+  font-weight: 700;
+}
+small,
+.small-txt {
+  font-size: 12px;
 }
 
 @include media-breakpoint-up(sm) {
