--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -4,7 +4,7 @@
 // @import "alert";
 @import "breadcrumb";
 @import "button";
-// @import "button-group";
+@import "button-group";
 @import "form";
 @import "font-type";
 @import "links";
