--- a/src/styles/utils/bg.scss
+++ b/src/styles/utils/bg.scss
@@ -5,4 +5,8 @@
     &-blue {
         background-color: $blue;
     }
+    &-dark {
+        background-color: $dark-d1;
+        color: $white;
+    }
 }
