--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -25,6 +25,8 @@ $white:    #fff !default;
 $black:    #000 !default;
 
 $blue:    #0091ff !default;
+$blue-d1: #016990;
+
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
 $pink:    #e83e8c !default;
@@ -36,6 +38,8 @@ $teal:    #20c997 !default;
 $cyan:    #17a2b8 !default;
 
 $dark: #282b30;
+$dark-d1: #1a1b1e;
+
 $gray: #eaedf3;
 $gray-d1: #6d7278;
 
