--- a/src/tpl/inc/page.twig
+++ b/src/tpl/inc/page.twig
@@ -27,7 +27,7 @@
         </style>
     </noscript>
 </head>
-<body>
+<body class="{{ bodyClass }}">
 <div id="preloader"></div>
 
 {% set title = "KTC" %}
