--- a/src/tpl/index.twig
+++ b/src/tpl/index.twig
@@ -17,6 +17,7 @@
             { link: 'news-item', name: 'Новость' },
             { link: 'contact', name: 'Контакты' },
             { link: 'policies', name: 'Пользовательское соглашение' },
+            { link: '404', name: '404' },
         ] %}
 
         <div class="wrapper">
