--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -18,7 +18,9 @@
   font-weight: 700;
   letter-spacing: 1px;
   text-transform: uppercase;
+  text-decoration: none;
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.05), 0 10px 20px 0 rgba(40, 43, 48, 0.14);
+  transition: all .15s; 
 
   &:focus,
   &.focus {
@@ -58,6 +60,11 @@ fieldset:disabled a.btn {
 //
 
 // Make a button look and behave like a link
+a.btn {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
 .btn-link {
   background-color: transparent;
 
@@ -101,6 +108,14 @@ input[type="button"] {
 .btn-white {
   background-color: $white;
   color: $dark;
+}
+.btn-blue {
+  background-color: $blue;
+  color: $white;
+
+  &:hover {
+    background-color: $blue-d1;
+  }
 }
 
 @include media-breakpoint-up(sm) {
