+ cmp-intro block

--- a/src/tpl/index.twig
+++ b/src/tpl/index.twig
@@ -10,6 +10,7 @@
     <body>
         {% set pages = [ 
             { link: 'main', name: 'Главная' },
+            { link: 'company', name: 'Компания' },
             { link: 'service', name: 'Услуги' },
             { link: 'models', name: 'Модельный ряд' },
             { link: 'models-category', name: 'Модельный ряд (категория)' },
