--- a/src/styles/components/font-type.scss
+++ b/src/styles/components/font-type.scss
@@ -98,6 +98,11 @@ small,
     margin-bottom: 20px;
     font-size: 28px;
   }
+  h4,
+  .h4 {
+    margin-bottom: 30px;
+    font-size: 26px;
+  }
   .title-bg {
     margin: -30px -35px 20px -35px;
     font-size: 142px;
@@ -110,6 +115,10 @@ small,
     margin: -55px -25px 30px -25px;
     font-size: 182px;
     letter-spacing: 11px;
+  }
+  h4,
+  .h4 {
+    margin-bottom: 40px;
   }
 }
 
