--- a/src/tpl/company.twig
+++ b/src/tpl/company.twig
@@ -14,7 +14,7 @@
             </div>
         </div>
 
-        <div class="bg-white">
+        <div class="bg-white pb-1">
             <div class="container">
                 <div class="content-company-inner">
                     <div class="cmp-intro">
@@ -40,8 +40,73 @@
                     </div>
 
                     <h4 class="h4">Структура предприятия</h4>
+
+                    <ul class="cmp-list-db-ft">
+                        <li>
+                            <div class="cmp-card">
+                                <div class="cmp-card__icon">
+                                    {% include "tpl/inc/svg/cmp-1.svg" %}
+                                </div>
+                                <div class="cmp-card__txt">Отдел материально-технического снабжения</div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="cmp-card">
+                                <div class="cmp-card__icon">
+                                    {% include "tpl/inc/svg/cmp-2.svg" %}
+                                </div>
+                                <div class="cmp-card__txt">Отдел логистики</div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="cmp-card">
+                                <div class="cmp-card__icon">
+                                    {% include "tpl/inc/svg/cmp-3.svg" %}
+                                </div>
+                                <div class="cmp-card__txt">Оформительный отдел</div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="cmp-card">
+                                <div class="cmp-card__icon">
+                                    {% include "tpl/inc/svg/cmp-4.svg" %}
+                                </div>
+                                <div class="cmp-card__txt">Конструкторский отдел</div>
+                            </div>
+                        </li>
+                    </ul>
+
+                    <h4 class="h4">Производство</h4>
+
+                    <div class="cmp-double-txt">
+                        <div class="cmp-double-txt__left">
+                            В производственном цикле задействуются заготовительный, сварочный участки, участок окраски, и сборочный участок. Каждый этап производства заканчивается проверкой отделом технического контроля.
+                        </div>
+                        <div class="cmp-double-txt__right">
+                            Мы постоянно модернизируем и технологически совершенствуем производственные процессы, чтобы удовлетворять запросам современной автомобильной промышленности.
+                        </div>
+                    </div>
                 </div>
 
+            </div>
+        </div>
+
+        <div class="bg-white pb-1">
+            <div class="container">
+                <h2 class="h2 pl-sm-3 pl-md-0">Наши клиенты</h2>
+
+                <ul class="cmp-clients-list">
+                    <li><img src="images/content/logo-clients/02.png" class="cmp-clients__pic" alt="" /></li>
+                    <li><img src="images/content/logo-clients/01.png" class="cmp-clients__pic" alt="" /></li>
+                    <li><img src="images/content/logo-clients/03.png" class="cmp-clients__pic" alt="" /></li>
+                    <li><img src="images/content/logo-clients/04.png" class="cmp-clients__pic" alt="" /></li>
+                    <li><img src="images/content/logo-clients/05.png" class="cmp-clients__pic" alt="" /></li>
+                    <li><img src="images/content/logo-clients/06.png" class="cmp-clients__pic" alt="" /></li>
+                    <li><img src="images/content/logo-clients/07.png" class="cmp-clients__pic" alt="" /></li>
+                    <li><img src="images/content/logo-clients/08.png" class="cmp-clients__pic" alt="" /></li>
+                    <li><img src="images/content/logo-clients/09.png" class="cmp-clients__pic" alt="" /></li>
+                    <li><img src="images/content/logo-clients/10.png" class="cmp-clients__pic" alt="" /></li>
+                </ul>
             </div>
         </div>
     </div>
