--- a/src/tpl/company.twig
+++ b/src/tpl/company.twig
@@ -14,7 +14,7 @@
             </div>
         </div>
 
-        <div class="bg-white pb-1">
+        <div class="bg-white pb-1 pb-sm-2 pb-md-28 pb-lg-32">
             <div class="container">
                 <div class="content-company-inner">
                     <div class="cmp-intro">
@@ -91,9 +91,17 @@
             </div>
         </div>
 
+        <div class="bg-gray">
+            <div class="container cmp-container-offset px-0 px-md-2 px-lg-9">
+                <div class="mb-5 mb-sm-9 px-lg-4">
+                    {% include "tpl/inc/pages/company/slider.twig" %}
+                </div>
+            </div>
+        </div>
+
         <div class="bg-white pb-1">
             <div class="container">
-                <h2 class="h2 pl-sm-3 pl-md-0">Наши клиенты</h2>
+                <h2 class="h2 cmp-title-offset">Наши клиенты</h2>
 
                 <ul class="cmp-clients-list">
                     <li><img src="images/content/logo-clients/02.png" class="cmp-clients__pic" alt="" /></li>
