--- a/src/styles/pages/company.scss
+++ b/src/styles/pages/company.scss
@@ -85,7 +85,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin: 0 0 0 -12px;
+    margin: -45px 0 0 -12px;
     padding: 0;
     list-style: none;
 
@@ -97,6 +97,11 @@
   &__pic {
     max-width: 100%;
   }
+}
+
+.cmp-title-offset {
+  position: relative;
+  top: -55px;
 }
 
 @include media-breakpoint-up(sm) {
@@ -172,7 +177,7 @@
   }
   .cmp-clients {
     &-list {
-      margin: 0 0 0 -15px;
+      margin: -50px 0 0 -15px;
   
       > li {
         width: 133px;
@@ -180,9 +185,18 @@
       }
     }
   }
+
+  .cmp-title-offset {
+    top: -90px;
+    padding-left: 40px;
+  }
 }
 
 @include media-breakpoint-up(md) {
+  .cmp-container-offset {
+    position: relative;
+    top: -245px;
+  }
   .content-company {
     &-inner {
       padding-left: 0;
@@ -195,6 +209,7 @@
   .cmp-intro {
     position: relative;
     max-width: 470px;
+    min-height: 200px;
     &-txt-sm {
       padding-left: 80px;
     }
@@ -237,7 +252,7 @@
   }
   .cmp-clients {
     &-list {
-      margin: 0 0 0 -20px;
+      margin: -30px 0 0 -20px;
   
       > li {
         width: 170px;
@@ -245,9 +260,16 @@
       }
     }
   }
+  .cmp-title-offset {
+    margin-top: -210px;
+    padding-left: 0;
+  }
 }
 
 @include media-breakpoint-up(lg) {
+  .cmp-container-offset {
+    top: -300px;
+  }
   .content-company {
     &-inner {
       padding-left: 110px;
@@ -293,5 +315,8 @@
         margin: 0 0 30px 28px;
       }
     }
+  }
+  .cmp-title-offset {
+    margin-top: -265px;
   }
 }
