--- a/src/tpl/index.twig
+++ b/src/tpl/index.twig
@@ -14,6 +14,7 @@
             { link: 'service', name: 'Услуги' },
             { link: 'models', name: 'Модельный ряд' },
             { link: 'models-category', name: 'Модельный ряд (категория)' },
+            { link: 'model-page', name: 'Модельный ряд (детальная страница)' },
             { link: 'news', name: 'Новости' },
             { link: 'news-item', name: 'Новость' },
             { link: 'contact', name: 'Контакты' },
