--- a/src/tpl/model-page.twig
+++ b/src/tpl/model-page.twig
@@ -17,23 +17,9 @@
         </div>
         <div class="bg-white">
             <div class="container">
-                <div class="mlp-intro">
-                    <h1 class="h1 mlp-intro__title">Агрегат ремонта и&nbsp;обслуживания станков-качалок АРОК</h1>
-                    <img src="images/temp/model.png" class="mlp-intro__pic" alt="">
+                {% include "tpl/inc/pages/model-item/mlp-intro.twig" %}
 
-                    <div class="mlp-intro-body">
-                        <p class="mlp-intro-body__title">Шасси КАМАЗ 43118/5350/43502</p>
-                        <div class="mlp-intro__descr">
-                            <p>
-                                Предназначен для ремонта и профилактического обслуживания оборудования нефтяных скважин, станков-качалок, а также наземного оборудования нефтепромыслов и с возможностью доставки аварийной бригады при условиях трудной проходимости Крайнего Севера.
-                            </p>
-                        </div>
-                        <div class="btn-group btn-group-vertical">
-                            <a href="#" class="btn btn-blue">Запросить стоимость</a>
-                            <a href="#" class="btn btn-blue-outline">Запросить тех. описание</a>
-                        </div>
-                    </div>
-                </div>
+                {% include "tpl/inc/pages/model-item/mlp-frame.twig" %}
             </div>
         </div>
 
