--- a/src/styles/pages/model-page.scss
+++ b/src/styles/pages/model-page.scss
@@ -45,6 +45,60 @@
   }
 }
 
+.mlp-frame {
+  padding: 40px 0;
+  &-top {
+    margin-bottom: 40px;
+  }
+  &-left {
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+  }
+  &__title {
+    margin-bottom: 30px;
+    font-size: 20px;
+  }
+  &__img {
+    display: block;
+    max-width: 100%;
+  }
+  &__h4 {
+    margin-bottom: 10px;
+    font-size: 14px;
+    font-weight: 700;
+    color: $blue-d1;
+    line-height: 1.3;
+  }
+  &__p {
+    margin-bottom: 20px;
+    line-height: 1.4;
+    font-size: 11px;
+    b {
+      font-weight: 700;
+    }
+  }
+  .btn {
+    font-size: 13px;
+    text-transform: none;
+    font-weight: 500;
+    box-shadow: none;
+    letter-spacing: 0;
+  }
+  &__ol {
+    margin: 0;
+    padding: 0 0 0 15px;
+    font-size: 11px;
+    color: $gray-d1;
+    > li {
+      padding-left: 10px;
+    }
+    span {
+      color: $dark;
+      font-weight: 500;
+    }
+  }
+}
+
 @include media-breakpoint-up(sm) {
   .mlp-intro {
     max-width: 630px;
@@ -81,6 +135,45 @@
       }
     }
   }
+  .mlp-frame {
+    &-body {
+      display: flex;
+      justify-content: space-between;
+    }
+
+    &-left {
+      width: 37%;
+    }
+    &-right {
+      width: 55%;
+    }
+    &__title {
+      font-size: 28px;
+    }
+    &__img {
+      max-width: 780px;
+      margin: 0 auto;
+    }
+    &__h4 {
+      margin-bottom: 20px;
+      font-size: 20px;
+    }
+    &__p {
+      margin-bottom: 25px;
+      font-size: 13px;
+      line-height: 1.7;
+    }
+    .btn {
+      padding: 0 30px;
+    }
+    &__ol {
+      font-size: 13px;
+
+      > li {
+        padding-left: 15px;
+      }
+    }
+  }
 }
 
 @include media-breakpoint-up(md) {
@@ -106,6 +199,27 @@
       margin-bottom: 20px;
     }
   }
+  .mlp-frame {
+    padding: 70px 0;
+    &-top {
+      margin-bottom: 75px;
+    }
+    &-left {
+      width: 28%;
+    }
+    &-right {
+      width: 65%;
+    }
+    &__ol {
+      padding: 0;
+      column-count: 2;
+      column-gap: 20px;
+
+      > li {
+        margin-bottom: 4px;
+      }
+    }
+  }
 }
 
 @include media-breakpoint-up(lg) {
@@ -122,6 +236,15 @@
       top: 20px;
       left: 50%;
       max-width: 645px;
+    }
+  }
+  .mlp-frame {
+    padding-bottom: 80px;
+    &-left {
+      width: 21.4%;
+    }
+    &-right {
+      width: 67%;
     }
   }
 }
