--- a/src/styles/blocks/index.scss
+++ b/src/styles/blocks/index.scss
@@ -6,6 +6,7 @@
 @import "ctx-card";
 @import "intro-about";
 @import "intro-slider";
+@import "gallery-slider";
 @import "service-list";
 @import "feedback";
 
