--- a/src/tpl/model-page.twig
+++ b/src/tpl/model-page.twig
@@ -15,10 +15,17 @@
 
             </div>
         </div>
+
         <div class="bg-white">
             <div class="container">
-                {% include "tpl/inc/pages/model-item/mlp-intro.twig" %}
+                {% include "tpl/inc/pages/model-item/mlp-intro.twig" %}               
+            </div>
+        </div>
 
+        {% include "tpl/inc/pages/model-item/tabs.twig" %}
+
+        <div class="bg-white">
+            <div class="container">
                 {% include "tpl/inc/pages/model-item/mlp-frame.twig" %}
             </div>
         </div>
