--- a/src/tpl/inc/pages/contact/tabs.twig
+++ b/src/tpl/inc/pages/contact/tabs.twig
@@ -2,17 +2,17 @@
     <div class="container">
         <ul class="nav-tabs" id="myTab" role="tablist">
             <li class="nav-tabs-item">
-                <a class="nav-tabs__link active" data-toggle="tab" href="#tab1" id="home-tab" role="tab">Продажи и снабжение</a>
+                <a class="nav-tabs__link active" data-toggle="tab" href="#tab1" role="tab">Продажи и снабжение</a>
             </li>
             <li class="nav-tabs-item">
-                <a class="nav-tabs__link" data-toggle="tab" href="#tab2" id="profile-tab" role="tab">Руководство</a>
+                <a class="nav-tabs__link" data-toggle="tab" href="#tab2" role="tab">Руководство</a>
             </li>
         </ul>
     </div>
 </div>
 <div class="bg-white py-2 pb-sm-1 pt-sm-6">
     <div class="container">
-        <div class="tab-content" id="myTabContent">
+        <div class="tab-content">
             <div class="tab-pane fade show active" id="tab1" role="tabpanel">
                 <div class="ctp-card-list">
                     <div class="ctp-card">
