--- a/src/tpl/inc/pages/model-item/mlp-frame.twig
+++ b/src/tpl/inc/pages/model-item/mlp-frame.twig
@@ -1,7 +1,29 @@
 <div class="mlp-frame">
     <h3 class="h3 mlp-frame__title">Конструкция</h3>
-    <div class="mlp-frame-top">
-        <img alt="" class="mlp-frame__img" src="images/temp/model-frame.png">
+    <div
+        class="mlp-frame-top">
+        <div class="swiper-container gallery-slider js-gallery-slider pb-3">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide gallery-card pb-0">
+                    <div class="gallery-card__img gallery-card__img--md" style="background-image: url('images/temp/model-frame.png')"></div>
+                </div>
+                <div class="swiper-slide gallery-card pb-0">
+                    <div class="gallery-card__img gallery-card__img--md" style="background-image: url('https://via.placeholder.com/780x410?text=780x410')"></div>
+                </div>
+                <div class="swiper-slide gallery-card pb-0">
+                    <div class="gallery-card__img gallery-card__img--md" style="background-image: url('https://via.placeholder.com/780x410?text=780x410')"></div>
+                </div>
+            </div>
+            <!-- Add Pagination -->
+            <div class="swiper-pagination no-anim"></div>
+            <!-- Add Arrows -->
+            <div class="swiper-button-next">
+                {% include "tpl/inc/svg/arrow-r.svg" %}
+            </div>
+            <div class="swiper-button-prev">
+                {% include "tpl/inc/svg/arrow-r.svg" %}
+            </div>
+        </div>
     </div>
     <div class="mlp-frame-body">
         <div class="mlp-frame-left">
@@ -10,7 +32,7 @@
             <p class="mlp-frame__p">
                 <b>
                     для перевозки лиц, заключенных под стражу,
-                    находящихся под стражей, задержанных (осужденных, подозреваемых, обвиняемых в совершении преступлений).
+                                        находящихся под стражей, задержанных (осужденных, подозреваемых, обвиняемых в совершении преступлений).
                 </b>
             </p>
             <p class="mlp-frame__p">
