+ mlp desr popup

--- a/src/tpl/inc/pages/model-item/tabs.twig
+++ b/src/tpl/inc/pages/model-item/tabs.twig
@@ -17,12 +17,67 @@
                 <div class="mlp-model">
                     <div class="mlp-pic-container">
                         <img src="images/temp/bitmap-copy.png" class="mlp-pic__img" alt="">
-                        <div class="mlp-pic__point" style="top: 55%; left: 14%;">+</div>
-                        <div class="mlp-pic__point" style="top: 0; left: 35%;">+</div>
-                        <div class="mlp-pic__point" style="top: 32%; left: 0;">+</div>
-                        <div class="mlp-pic__point" style="top: 14%; left: 80%;">+</div>
+                        <div class="mlp-pic__point js-mlp-point" style="top: 55%; left: 14%;" data-ref="1">+</div>
+                        <div class="mlp-pic__point js-mlp-point" style="top: 0; left: 35%;" data-ref="2">+</div>
+                        <div class="mlp-pic__point js-mlp-point" style="top: 32%; left: 0;" data-ref="3">+</div>
+                        <div class="mlp-pic__point js-mlp-point" style="top: 14%; left: 80%;" data-ref="4">+</div>
                     </div>
-                    <div class="mlp-model-descr"></div>
+                    {% include "tpl/inc/pages/model-item/mlp-descr.twig" %}
+                </div>
+                <div class="d-none">
+                    <div id="mlp-content-1">
+                        <div class="mlp-model-descr__title">Кузов</div>
+                        <div class="mlp-content">
+                            <p>Кузов изготовлен по бескаркасной технологии с глухими скосами или без, по периметру обвязан алюминиевым уголком.</p>
+                            <p>Наружная обшивка - плакированный металл или пластик.</p>
+                            <p>
+                                Внутренняя обшивка - пластик светлых тонов, потолок белого цвеат.
+                                Утеплитель - экструдированный пенополистирол. Внутренняя обшивка - пластик светлых тонов, потолок белого цвеат.
+                                Утеплитель - экструдированный пенополистирол.
+                            </p>
+                            <p>Кузов изготовлен по бескаркасной технологии с глухими скосами или без, по периметру обвязан алюминиевым уголком.</p>
+                            <p>Наружная обшивка - плакированный металл или пластик.</p>
+                            <p>
+                                Внутренняя обшивка - пластик светлых тонов, потолок белого цвеат.
+                                Утеплитель - экструдированный пенополистирол. Внутренняя обшивка - пластик светлых тонов, потолок белого цвеат.
+                                Утеплитель - экструдированный пенополистирол.
+                            </p>
+                        </div>
+                    </div>
+                    <div id="mlp-content-2">
+                            <div class="mlp-model-descr__title">Кузов 2</div>
+                            <div class="mlp-content">
+                                <p>
+                                    Внутренняя обшивка - пластик светлых тонов, потолок белого цвеат.
+                                    Утеплитель - экструдированный пенополистирол. Внутренняя обшивка - пластик светлых тонов, потолок белого цвеат.
+                                    Утеплитель - экструдированный пенополистирол.
+                                </p>
+                                <p>Кузов изготовлен по бескаркасной технологии с глухими скосами или без, по периметру обвязан алюминиевым уголком.</p>
+                                <p>Наружная обшивка - плакированный металл или пластик.</p>
+                                <p>
+                                    Внутренняя обшивка - пластик светлых тонов, потолок белого цвеат.
+                                    Утеплитель - экструдированный пенополистирол. Внутренняя обшивка - пластик светлых тонов, потолок белого цвеат.
+                                    Утеплитель - экструдированный пенополистирол.
+                                </p>
+                            </div>
+                    </div>
+                    <div id="mlp-content-3">
+                            <div class="mlp-model-descr__title">Кузов 3</div>
+                            <div class="mlp-content">
+                                <p>
+                                    Внутренняя обшивка - пластик светлых тонов, потолок белого цвеат.
+                                    Утеплитель - экструдированный пенополистирол. Внутренняя обшивка - пластик светлых тонов, потолок белого цвеат.
+                                    Утеплитель - экструдированный пенополистирол.
+                                </p>
+                            </div>
+                    </div>
+                    <div id="mlp-content-4">
+                            <div class="mlp-model-descr__title">Кузов 4</div>
+                            <div class="mlp-content">
+                                <p>Кузов изготовлен по бескаркасной технологии с глухими скосами или без, по периметру обвязан алюминиевым уголком.</p>
+                                <p>Наружная обшивка - плакированный металл или пластик.</p>
+                            </div>
+                    </div>
                 </div>
             </div>
             <div class="tab-pane fade py-3 py-sm-6 pt-md-9" id="tab2" role="tabpanel">
