--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,8 +9,9 @@
 
 // Libs
 @import "libs/swiper";
-@import "libs/select2/core";
-@import "libs/magnific-popup/main";
+// @import "libs/select2/core";
+// @import "libs/magnific-popup/main";
+@import "libs/nano";
 //-----------------------------------------
 
 // Components
