--- a/src/styles/pages/model-page.scss
+++ b/src/styles/pages/model-page.scss
@@ -1,3 +1,5 @@
+@import "./model-page/mlp-descr.scss"; 
+
 .mlp-intro {
   padding-bottom: 30px;
   &__title {
@@ -100,24 +102,16 @@
 }
 
 .mlp-model {
+  position: relative;
   padding: 60px 0 40px 0;
   text-align: center;
-
-  &-descr {
-    position: fixed;
-    z-index: 100;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: none;
-  }
 }
 
 .mlp-pic {
   &-container {
     position: relative;
     display: inline-block;
+    transition: transform .3s ease-in-out;
   }
   &__img {
    width: 100%;
@@ -221,7 +215,6 @@
       }
     }
   }
-
   .mlp-pic {
     &__point {
       width: 48px;
@@ -283,6 +276,14 @@
   }
   .mlp-model {
     padding: 120px 0;
+  }
+
+  .mlp-pic {
+    &-container {
+      .mlp-popup & {
+        transform: translate3d(-190px, 0, 0);
+      }
+    }
   }
 }
 
