--- a/src/tpl/inc/blocks/feedback.twig
+++ b/src/tpl/inc/blocks/feedback.twig
@@ -8,7 +8,7 @@
             <div class="feedback-right">
                 <form class="feedback-form">
                     <div class="feedback-form-row feedback-form-row--frst">
-                        <div class="feedback-form-col"><input class="feedback-form__input" id="" name="" placeholder="Ваше имя" type="text"></div>
+                        <div class="feedback-form-col"><input class="feedback-form__input has-error" id="" name="" placeholder="Ваше имя" type="text"></div>
                         <div class="feedback-form-col"><input class="feedback-form__input" id="" name="" placeholder="Телефон" type="text"></div>
                         <div class="feedback-form-col"><input class="feedback-form__input" id="" name="" placeholder="E-mail" type="text"></div>
 
