--- a/src/tpl/inc/components/news-slider.twig
+++ b/src/tpl/inc/components/news-slider.twig
@@ -54,5 +54,5 @@
     </a>
   </div>
   <!-- Add Pagination -->
-  <div class="swiper-pagination"></div>
+  <div class="swiper-pagination no-anim"></div>
 </div>
