--- a/src/tpl/inc/pages/company/slider.twig
+++ b/src/tpl/inc/pages/company/slider.twig
@@ -1,4 +1,4 @@
-<div class="swiper-container news-slider js-news-slider px-0 " data-perview="1">
+<div class="swiper-container news-slider js-news-slider px-0 " data-perview="1" data-autoplay="true">
     <div class="swiper-wrapper">
         <div class="swiper-slide news-card pb-0">
             <div class="news-card__img news-card__img--lg" style="background-image: url('images/temp/news-temp.png')"></div>
