--- a/src/tpl/inc/pages/contact/map.twig
+++ b/src/tpl/inc/pages/contact/map.twig
@@ -5,7 +5,8 @@
             Смотреть на карте
         </span>
         <span class="ctp-map__link-close">
-            {% include "tpl/inc/svg/i-exit.svg" %}
+            <span class="sp bg-white">{% include "tpl/inc/svg/i-exit.svg" %}</span>
+            
             Закрыть карту
         </span>
     </a>
