--- a/src/styles/blocks/intro-slider.scss
+++ b/src/styles/blocks/intro-slider.scss
@@ -3,6 +3,10 @@
     height: 100vh;
     min-height: 568px;
 
+    .swiper-wrapper {
+        overflow: hidden;
+    }
+
     &__title {
         position: absolute;
         top: 75px;
@@ -58,12 +62,27 @@
 }
 
 .intro-slide {
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
+    position: relative;
     padding: 110px 20px 0 20px;
 
+    &__pic {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        .swiper-slide-active & {
+            animation: scaleToggle 8s linear infinite; //cubic-bezier(.43, 0, .03, 1)
+        }
+    }
+
     &-inner {
+        position: relative;
+        z-index: 2;
         max-width: 1280px;
         margin: 0 auto;
     }
@@ -254,5 +273,17 @@
     }
     .intro-slider-controls {
         width: 400px;
+    }
+}
+
+@keyframes scaleToggle {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.04);
+    }
+    100% {
+        transform: scale(1);
     }
 }
