--- a/src/styles/pages/contact.scss
+++ b/src/styles/pages/contact.scss
@@ -128,10 +128,16 @@
     &-close {
       display: none;
       align-items: center;
-      .is-opened &{
+      .is-opened & {
         display: flex;
       }
       svg {
+        display: block;
+        width: 40px;
+        height: 40px;
+      }
+      .sp {
+        border-radius: 50%;
         margin-right: 10px;
       }
     }
