--- a/src/tpl/inc/blocks/intro-slider.twig
+++ b/src/tpl/inc/blocks/intro-slider.twig
@@ -1,7 +1,8 @@
 <div class="swiper-container intro-slider js-intro-slider">
     <div class="intro-slider__title">Комтехсервис</div>
   <div class="swiper-wrapper">
-    <div class="swiper-slide intro-slide" style="background-image: url('images/temp/m-slide1.jpg')">
+    <div class="swiper-slide intro-slide" >
+      <div class="intro-slide__pic" style="background-image: url('images/temp/m-slide1.jpg')"></div>
       <div class="intro-slide-inner">
         <div class="intro-slide__title">
           Проектирование и&nbsp;производство широкого ряда&nbsp;спецтехники
@@ -9,7 +10,8 @@
         <div class="ia-card">
           <div class="ia-card-top">
             <div class="ia-card__num">
-              >4000<span class="sm">м<sup>2</sup></span>
+              ><span class="spincrement" data-from="0" data-to="4000">4000</span>
+              <span class="sm">м<sup>2</sup></span>
             </div>
           </div>
           <div class="ia-card-body">
@@ -20,7 +22,8 @@
         </div>
       </div>
     </div>
-    <div class="swiper-slide intro-slide" style="background-image: url('images/temp/m-slide2.jpg')">
+    <div class="swiper-slide intro-slide">
+      <div class="intro-slide__pic" style="background-image: url('images/temp/m-slide2.jpg')"></div>
         <div class="intro-slide-inner">
           <div class="intro-slide__title">
             Проектирование и&nbsp;производство широкого ряда&nbsp;спецтехники 2
@@ -28,7 +31,8 @@
           <div class="ia-card">
             <div class="ia-card-top">
               <div class="ia-card__num">
-                >5000<span class="sm">м<sup>2</sup></span>
+                ><span class="spincrement" data-from="0" data-to="5000">5000</span>
+                <span class="sm">м<sup>2</sup></span>
               </div>
             </div>
             <div class="ia-card-body">
