--- a/src/tpl/inc/pages/main/intro-about.twig
+++ b/src/tpl/inc/pages/main/intro-about.twig
@@ -15,7 +15,7 @@
           <div class="ia-card">
             <div class="ia-card-top">
               <div class="ia-card__num">
-                >14
+                ><span class="js-spincrement" data-from="1" data-to="14"></span>
               </div>
               <div class="ia-card__text">
                 лет
@@ -32,7 +32,7 @@
           <div class="ia-card">
             <div class="ia-card-top">
               <div class="ia-card__num">
-                >60
+                ><span class="js-spincrement" data-from="1" data-to="60"></span>
               </div>
             </div>
             <div class="ia-card-body">
@@ -46,7 +46,7 @@
           <div class="ia-card">
             <div class="ia-card-top">
               <div class="ia-card__num">
-                >300
+                ><span class="js-spincrement" data-from="1" data-to="300"></span>
               </div>
               <div class="ia-card__text">
                 единиц техники
