--- a/src/tpl/inc/components/catalog.twig
+++ b/src/tpl/inc/components/catalog.twig
@@ -35,7 +35,7 @@
 
 <div class="catalog-list">
         {% for item in cards %}
-        <div class="catalog-card">
+        <div class="catalog-card js-fade-in">
             <a href="#" class="catalog-card-link">
                 <span class="catalog-card__img"  style="background-image: url('{{item.img}}')"></span>
                 <span class="catalog-card__title">{{ item.title }}</span>
