--- a/src/tpl/inc/pages/main/list-text.twig
+++ b/src/tpl/inc/pages/main/list-text.twig
@@ -14,7 +14,7 @@
 ] %}
 <div class="ctx-card-list">
     {% for item in lists %}
-        <div class="ctx-card">
+        <div class="ctx-card js-fade-in">
             <div class="ctx-card__img" style="background-image: url('{{item.img}}')"></div>
             <div class="ctx-card__text">{{ item.text }}</div>
         </div>
