--- a/src/tpl/inc/pages/model-category/catalog.twig
+++ b/src/tpl/inc/pages/model-category/catalog.twig
@@ -43,7 +43,7 @@
 
 <div class="catalog-list mb-4">
         {% for item in cards %}
-        <div class="catalog-card">
+        <div class="catalog-card js-fade-in">
             <a href="#" class="catalog-card-link">
                 <span class="catalog-card__img"  style="background-image: url('{{item.img}}')"></span>
                 <span class="catalog-card__title catalog-card__title--lwrcase mb-1">{{ item.title }}</span>
