--- a/src/tpl/service.twig
+++ b/src/tpl/service.twig
@@ -15,11 +15,11 @@
         </div>
 
         <div class="container pt-3">
-            <h3 class="h3 h3--lg-pl">Производство и сервис</h3>
+            <h3 class="h3 h3--lg-pl js-fade-in">Производство и сервис</h3>
                 
             {% include "tpl/inc/pages/service/list-service.twig" %}
 
-            <h3 class="h3 h3--lg-pl">Покупка и доставка</h3>
+            <h3 class="h3 h3--lg-pl js-fade-in">Покупка и доставка</h3>
             {% include "tpl/inc/pages/service/list-service2.twig" %}
         </div>
     </div>
