--- a/src/tpl/inc/pages/news/catalog.twig
+++ b/src/tpl/inc/pages/news/catalog.twig
@@ -1,5 +1,5 @@
 <div class="news-list">
-    <a class="news-card" href="#">
+    <a class="news-card js-fade-in" href="#">
         <div class="news-card__img" style="background-image: url('images/temp/news.png')"></div>
         <div class="news-card-body">
             <div class="news-card__title">
@@ -12,7 +12,7 @@
 
         </div>
     </a>
-    <a class="news-card news-card--no-img" href="#">
+    <a class="news-card news-card--no-img js-fade-in" href="#">
         <div class="news-card-body">
             <div class="news-card__title">
                 Передвижные мастерские с КМУ (АРОК)
@@ -26,7 +26,7 @@
             <div class="news-card__arrow">{% include "tpl/inc/svg/arrow-r.svg" %}</div>
         </div>
     </a>
-    <a class="news-card news-card--no-img" href="#">
+    <a class="news-card news-card--no-img js-fade-in" href="#">
         <div class="news-card-body">
             <div class="news-card__title">
                 Передвижной медицинский комплекс «Фельдшерско-акушерский пункт»
@@ -40,7 +40,7 @@
             <div class="news-card__arrow">{% include "tpl/inc/svg/arrow-r.svg" %}</div>
         </div>
     </a>
-    <a class="news-card news-card--no-img" href="#">
+    <a class="news-card news-card--no-img js-fade-in" href="#">
         <div class="news-card-body">
             <div class="news-card__title">
                 ПРОМАВТО на выставке промышленного потенциала нижегородской области
@@ -54,7 +54,7 @@
             <div class="news-card__arrow">{% include "tpl/inc/svg/arrow-r.svg" %}</div>
         </div>
     </a>
-    <a class="news-card" href="#">
+    <a class="news-card js-fade-in" href="#">
         <div class="news-card__img" style="background-image: url('images/temp/news2.png')"></div>
         <div class="news-card-body">
             <div class="news-card__title">
@@ -67,7 +67,7 @@
 
         </div>
     </a>
-    <a class="news-card" href="#">
+    <a class="news-card js-fade-in" href="#">
             <div class="news-card__img" style="background-image: url('images/temp/news3.png')"></div>
             <div class="news-card-body">
                 <div class="news-card__title">
