--- a/src/tpl/inc/pages/service/list-service2.twig
+++ b/src/tpl/inc/pages/service/list-service2.twig
@@ -1,5 +1,5 @@
 <div class="service-list">
-    <a class="news-card" href="#">
+    <a class="news-card js-fade-in" href="#">
         <div class="news-card__img" style="background-image: url('https://via.placeholder.com/630x290?text=630x290')"></div>
         <div class="news-card-body">
             <div class="news-card__title mb-0">
@@ -10,7 +10,7 @@
             <div class="news-card__arrow">{% include "tpl/inc/svg/arrow-r.svg" %}</div>
         </div>
     </a>
-    <a class="news-card" href="#">
+    <a class="news-card js-fade-in" href="#">
         <div class="news-card__img" style="background-image: url('https://via.placeholder.com/630x290?text=630x290')"></div>
         <div class="news-card-body">
             <div class="news-card__title mb-0">
@@ -21,7 +21,7 @@
             <div class="news-card__arrow">{% include "tpl/inc/svg/arrow-r.svg" %}</div>
         </div>
     </a>
-    <a class="news-card" href="#">
+    <a class="news-card js-fade-in" href="#">
         <div class="news-card__img" style="background-image: url('https://via.placeholder.com/630x290?text=630x290')"></div>
         <div class="news-card-body">
             <div class="news-card__title mb-0">
